--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
-body {
-  color: #515151;
-}
-
 .title.is-2 {
   text-align: center;
+}
+
+#navbar-brandTitle {
+  font-size: 25px;
+}
+
+#active {
+  background-color: #FFFDCF;
+  color: #515151;
 }
 
 /* Bulma Utilities */
@@ -928,7 +933,7 @@ table th {
   width: 100%;
 }
 .navbar.has-shadow {
-  box-shadow: 0 2px 0 0 #838383;
+  box-shadow: 0 5px 8px 0 #838383;
 }
 .navbar.is-fixed-bottom, .navbar.is-fixed-top {
   left: 0;
@@ -1075,9 +1080,9 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   background-color: transparent;
   border-bottom-color: #485fc7;
   border-bottom-style: solid;
-  border-bottom-width: 3px;
+  border-bottom-width: 0px;
   color: #485fc7;
-  padding-bottom: calc(0.5rem - 3px);
+  padding-bottom: calc(0.5rem - 0px);
 }
 
 .navbar-content {
