--- a/sass/AboutUs.scss
+++ b/sass/AboutUs.scss
@@ -7,15 +7,20 @@ $green: #B6E5C6;
 
 $success: $green;
 $danger: $brown;
-$body-background-color: $yellow;
+$body-background-color: $brown;
+
 
 #active{
-    background-color: $yellow;
+    background-color: $brown;
     color: $grey-darker;
 }
 
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
-@import "../node_modules/bulma/sass/utilities/controls.sass";
 @import "../node_modules/bulma/sass/elements/title.sass";
-@import "../node_modules/bulma/sass/components/navbar.sass";
+@import "../node_modules/bulma/sass/utilities/mixins.sass";
+@import "../node_modules/bulma/sass/grid/_all.sass";
+@import "../node_modules/bulma/sass/grid/columns.sass";
+@import "../node_modules/bulma/sass/helpers/_all.sass";
+@import "../node_modules/bulma/sass/helpers/spacing.sass";
+@import "../node_modules/bulma/sass/components/card.sass";
