Add a footer on all of the pages. Close #16

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,3 +34,9 @@ $navbar-tab-active-border-bottom-width: 0px;
 @import "../node_modules/bulma/sass/elements/title.sass";
 @import "../node_modules/bulma/sass/components/navbar.sass";
 @import "../node_modules/bulma/sass/components/_all.sass";
+@import "../node_modules/bulma/sass/layout/footer.sass";
+@import "../node_modules/bulma/sass/elements/image.sass";
+@import "../node_modules/bulma/sass/helpers/flexbox.sass";
+@import "../node_modules/bulma/sass/helpers/float.sass";
+
+
