--- a/sass/AboutUs.scss
+++ b/sass/AboutUs.scss
@@ -4,16 +4,22 @@ $yellow: #FFFDCF;
 $grey-darker: #515151;
 $brown: #D3C3A4;
 $green: #B6E5C6;
+$white: hsl(0, 0%, 100%);
 
 $success: $green;
 $danger: $brown;
 $body-background-color: $brown;
-
+$has-text-info: $white;
 
 #active{
     background-color: $brown;
     color: $grey-darker;
 }
+
+$card-background-color: $grey-darker;
+$card-shadow: 0px 5px 16px;
+$card-shadow: $grey-darker;
+$card-radius: 16px;
 
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
@@ -24,3 +30,5 @@ $body-background-color: $brown;
 @import "../node_modules/bulma/sass/helpers/_all.sass";
 @import "../node_modules/bulma/sass/helpers/spacing.sass";
 @import "../node_modules/bulma/sass/components/card.sass";
+@import "../node_modules/bulma/sass/helpers/color.sass";
+@import "../node_modules/bulma/sass/helpers/spacing.sass";
