--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,21 @@
   background-color: #838383;
 }
 
+footer {
+  border-radius: 25px 25px 0px 0px;
+  box-shadow: -29px -1px 16px rgba(0, 0, 0, 0.45);
+}
+
+html, body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+body > footer {
+  margin-top: auto;
+}
+
 /* Bulma Utilities */
 .pagination-previous,
 .pagination-next,
@@ -1092,7 +1107,7 @@ table th {
   width: 100%;
 }
 .navbar.has-shadow {
-  box-shadow: 0 5px 8px 0 #838383;
+  box-shadow: 0 5px 8px 0 rgba(80, 80, 80, 0.664);
 }
 .navbar.is-fixed-bottom, .navbar.is-fixed-top {
   left: 0;
@@ -1104,7 +1119,7 @@ table th {
   bottom: 0;
 }
 .navbar.is-fixed-bottom.has-shadow {
-  box-shadow: 0 -2px 0 0 #838383;
+  box-shadow: 0 -2px 0 0 rgba(80, 80, 80, 0.664);
 }
 .navbar.is-fixed-top {
   top: 0;
@@ -2811,7 +2826,7 @@ button.dropdown-item.is-active {
   width: 100%;
 }
 .navbar.has-shadow {
-  box-shadow: 0 5px 8px 0 #838383;
+  box-shadow: 0 5px 8px 0 rgba(80, 80, 80, 0.664);
 }
 .navbar.is-fixed-bottom, .navbar.is-fixed-top {
   left: 0;
@@ -2823,7 +2838,7 @@ button.dropdown-item.is-active {
   bottom: 0;
 }
 .navbar.is-fixed-bottom.has-shadow {
-  box-shadow: 0 -2px 0 0 #838383;
+  box-shadow: 0 -2px 0 0 rgba(80, 80, 80, 0.664);
 }
 .navbar.is-fixed-top {
   top: 0;
@@ -3754,8 +3769,8 @@ label.panel-block:hover {
 }
 
 .footer {
-  background-color: #fafafa;
-  padding: 3rem 1.5rem 6rem;
+  background-color: #515151;
+  padding: 1rem 1.5rem 1.4rem;
 }
 
 .image {
@@ -4081,18 +4096,4 @@ label.panel-block:hover {
 
 .is-flex-shrink-5 {
   flex-shrink: 5 !important;
-}
-
-.is-clearfix::after {
-  clear: both;
-  content: " ";
-  display: table;
-}
-
-.is-pulled-left {
-  float: left !important;
-}
-
-.is-pulled-right {
-  float: right !important;
 }
