--- a/sass/feedback.scss
+++ b/sass/feedback.scss
@@ -32,7 +32,7 @@ $button-focus-box-shadow-size: 0px 2px 8px;
 $box-background-color: $yellow;
 
 #form{
-    max-width: 500px;
+    width: 500px;
     margin: auto;
     border-radius: 30px;
     $box-shadow: 29px;
