--- a/sass/feedback.scss
+++ b/sass/feedback.scss
@@ -20,7 +20,7 @@ $body-background-color: $green;
 $button-focus-color: $white;
 $button-background-color: $grey-darker; 
 $button-hover-color: $white;
-$button-focus-box-shadow-color: $white-ter;
+$button-focus-box-shadow-color: rgba(0, 0, 0, 0.45);
 $button-border-width: 0px;
 $button-focus-box-shadow-size: 0px 2px 8px;
 
