--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,12 @@
   text-align: center;
 }
 
-#navbar-brandTitle {
-  font-size: 25px;
+.subtitle {
+  text-align: justify;
 }
 
-#navbar {
-  position: fixed;
-  top: 0;
-  width: 100%;
+#navbar-brandTitle {
+  font-size: 25px;
 }
 
 .navbar-burger:hover {
@@ -21,9 +19,6 @@
 footer {
   border-radius: 25px 25px 0px 0px;
   box-shadow: -29px -1px 16px rgba(0, 0, 0, 0.45);
-  position: fixed;
-  bottom: 0;
-  width: 100%;
 }
 
 html, body {
