--- a/css/AboutUs.css
+++ b/css/AboutUs.css
@@ -1,8 +1,12 @@
+/* Colors used */
+/* Active tab in navbar */
 #active {
   background-color: #D3C3A4;
   color: #515151;
 }
 
+/* Card design changes */
+/* Imported bulma sass files for customizing */
 /* Bulma Utilities */
 .is-unselectable {
   -webkit-touch-callout: none;
