--- a/sass/feedback.scss
+++ b/sass/feedback.scss
@@ -1,22 +1,24 @@
 @charset "utf-8";
 
+/* Colors used */ 
 $yellow: #FFFDCF;
 $grey-darker: #515151;
 $brown: #D3C3A4;
 $green: #B6E5C6;
 $white: hsl(0, 0%, 100%);
 $white-ter: #838383;
-
 $success: $green;
 $danger: $brown;
+
 $body-background-color: $green;
 
-
+/* Active tab in navbar */
 #active{
     background-color: $green;
     color: $grey-darker;
 }
 
+/* Button design changes */
 $button-focus-color: $white;
 $button-background-color: $grey-darker; 
 $button-hover-color: $white;
@@ -25,20 +27,19 @@ $button-border-width: 0px;
 $button-focus-box-shadow-size: 0px 2px 8px;
 
 #buttonHover:hover{
-
     background-color: $white-ter;
 }
 
 $box-background-color: $yellow;
-
+/* Form design */
 #form{
     width: 500px;
     margin: auto;
     border-radius: 30px;
     $box-shadow: 29px;
-    
 }
 
+/* Imported bulma sass files for customizing */
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
 @import "../node_modules/bulma/sass/elements/title.sass";
