--- a/sass/geoMap.scss
+++ b/sass/geoMap.scss
@@ -1,16 +1,18 @@
 @charset "utf-8";
 
+/* Colors used */ 
 $yellow: #FFFDCF;
 $grey-darker: #515151;
 $brown: #D3C3A4;
 $green: #B6E5C6;
 $white-ter: #838383;
 $white: hsl(0, 0%, 100%);
-
 $success: $green;
 $danger: $brown;
+
 $body-background-color: $green;
 
+/* Button design changes */
 $button-focus-color: $white;
 $button-background-color: $grey-darker; 
 $button-hover-color: $white;
@@ -19,26 +21,25 @@ $button-border-width: 0px;
 $button-focus-box-shadow-size: 0px 2px 8px;
 
 #buttonHover:hover{
-
     background-color: $white-ter;
 }
 
+/* Map design */
 #map{
     height: 450px;
-    
     margin-top: 60px;
     margin-left: 220px;
     margin-right: 220px;
-
     position: relative;
-
     box-shadow: 0px 1px 16px rgba(0, 0, 0, 0.45);
     border-radius: 16px;
 }
 
+/* Boxes design changes */
 $box-background-color: $brown;
 $box-shadow: 0px 5px 12px rgba(159, 148, 126, 0.45);
 
+/* Imported bulma sass files for customizing */
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/utilities/mixins.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
