--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,30 +1,38 @@
 @charset "utf-8";
 
+/* Colors used */ 
 $yellow: #FFFDCF;
 $grey-darker: #515151;
 $brown: #D3C3A4;
 $green: #B6E5C6;
-
 $success: $green;
 $danger: $brown;
+
 $body-background-color: $yellow;
 
+/* Active tab in navbar */
 #active{
     background-color: $yellow;
     color: $grey-darker;
 }
 
+/* Small changes for columns */
 .column{
     height: 400px;
     border-radius: 15px;
 }
+
+/* Geography section */
 #geography{
     box-shadow: 0px 5px 12px rgba(90, 122, 101, 0.45);
 }
+
+/* History section */
 #history{
     box-shadow: 0px 5px 12px rgba(159, 148, 126, 0.45);
 }
 
+/* Imported bulma sass files for customizing */
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/utilities/mixins.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
