--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,18 +1,23 @@
 @charset "utf-8";
 
+/* Colors used */ 
 $white-ter: #838383;
 $grey-darker: #515151;
 $white: hsl(0, 0%, 100%);
 
+/* Additional text formatting */
+/* Title formatting */
 .title.is-2{
     text-align: center;
 }
-$subtitle-color: $grey-darker;
 
+/* Subtitle formatting */
+$subtitle-color: $grey-darker;
 .subtitle{
     text-align:justify;
 }
 
+/* Navbar design changes */
 #navbar-brandTitle{
     font-size: 25px;
 }
@@ -32,6 +37,7 @@ $navbar-tab-active-border-bottom-width: 0px;
     background-color: $white-ter;
 }
 
+/* Footer design changes */
 $footer-background-color: $grey-darker;
 $footer-padding: 1rem 1.5rem 1.4rem;
 
@@ -50,6 +56,7 @@ body > footer {
     margin-top: auto;
 }
 
+/* Imported bulma sass files for customizing */
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
 @import "../node_modules/bulma/sass/utilities/controls.sass";
